--- a/wellfin/pubspec.yaml
+++ b/wellfin/pubspec.yaml
@@ -34,14 +34,58 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  firebase_core: ^2.24.2
-  firebase_auth: ^4.15.3
-  cloud_firestore: ^4.13.6
+  firebase_core: ^3.14.0
+  firebase_auth: ^5.6.0
+  cloud_firestore: ^5.6.9
   provider: ^6.1.1
   google_sign_in: ^6.1.6
   intl: ^0.20.2
   flutter_localizations:
     sdk: flutter
+
+  # Firebase & Google Services
+  firebase_analytics: ^11.5.0
+  firebase_messaging: ^15.2.7
+  firebase_crashlytics: ^4.3.7
+  firebase_performance: ^0.10.1+7
+
+  # State Management
+  riverpod: ^2.4.9
+  flutter_riverpod: ^2.4.9
+
+  # Google Cloud AI & APIs
+  googleapis: ^14.0.0
+  googleapis_auth: ^2.0.0
+
+  # HTTP & API
+  http: ^1.1.2
+  dio: ^5.4.0
+
+  # Local Storage & Caching
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  shared_preferences: ^2.2.2
+
+  # UI Components
+  flutter_svg: ^2.0.9
+  cached_network_image: ^3.3.0
+  shimmer: ^3.0.0
+  lottie: ^3.3.1
+
+  # Calendar & Date
+  table_calendar: ^3.0.9
+  timezone: ^0.10.1
+
+  # Notifications
+  flutter_local_notifications: ^19.2.1
+
+  # Charts & Analytics
+  fl_chart: ^1.0.0
+
+  # Utilities
+  uuid: ^4.2.1
+  logger: ^2.0.2+1
+  permission_handler: ^12.0.0+1
 
 dev_dependencies:
   flutter_test:
@@ -52,7 +96,9 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^6.0.0
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.7
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -66,9 +112,10 @@ flutter:
   generate: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
+    - assets/icons/
+    - assets/animations/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -81,12 +128,12 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: Roboto
+      fonts:
+        - asset: assets/fonts/Roboto-VariableFont_wdth,wght.ttf
+        - asset: assets/fonts/Roboto-Italic-VariableFont_wdth,wght.ttf
+          style: italic
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
