--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,8 @@ android/app/release
 **/android/local.properties
 **/android/**/GeneratedPluginRegistrant.java
 
+google-services.json
+
 # iOS specific
 **/ios/**/*.mode1v3
 **/ios/**/*.mode2v3
