デプロイ手順を整備

--- a/firebase.json
+++ b/firebase.json
@@ -5,6 +5,6 @@
   "appDistribution": {
     "app": "1:933043164976:android:97bcddf0bc4d976dd65af5",
     "groups": "testers",
-    "releaseNotesFile": "release_notes.txt"
+    "releaseNotesFile": "doc/release_notes.md"
   }
 }
