--- a/wellfin/android/app/src/main/AndroidManifest.xml
+++ b/wellfin/android/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
         android:fullBackupContent="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:enableOnBackInvokedCallback="true"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/LaunchTheme">
         
         <activity
