--- a/wellfin/pubspec.yaml
+++ b/wellfin/pubspec.yaml
@@ -90,6 +90,7 @@ dependencies:
   # Functional Programming
   dartz: ^0.10.1
   equatable: ^2.0.5
+  auto_size_text: ^3.0.0
 
 dev_dependencies:
   flutter_test:
